[package]
name = "coremidi-hotplug-notification"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Simple helper providing a way to receive device updates notifications on MacOS"
homepage = "https://github.com/valsteen/coremidi-hotplug-notification"
documentation = "https://github.com/valsteen/coremidi-hotplug-notification/#readme"
repository = "https://github.com/valsteen/coremidi-hotplug-notification"
keywords = ["coremidi", "midi", "hotplug", "macos"]
categories = []
readme = "README.md"


[dependencies]
once_cell = "1.19.0"
core-foundation = "0.9.4"
coremidi = "0.8.0"
log = "0.4.20"
